--- a/.gitmodules
+++ b/.gitmodules
@@ -6,10 +6,10 @@
 	url = https://github.com/othree/html5.vim.git
 [submodule "bundle/mako"]
 	path = bundle/mako
-	url = git@github.com:lambacck/mako.vim.git
+	url = https://github.com/lambacck/mako.vim.git
 [submodule "bundle/VisIncr"]
 	path = bundle/VisIncr
-	url = git@github.com:lambacck/VisIncr.git
+	url = https://github.com/lambacck/VisIncr.git
 [submodule "bundle/a"]
 	path = bundle/a
 	url = git://github.com/vim-scripts/a.vim.git
@@ -18,7 +18,7 @@
 	url = git://github.com/tpope/vim-surround.git
 [submodule "bundle/aspvbs"]
 	path = bundle/aspvbs
-	url = git@github.com:lambacck/aspvbs.vim.git
+	url = https://github.com/lambacck/aspvbs.vim.git
 [submodule "bundle/vim-css"]
 	path = bundle/vim-css
 	url = git://github.com/lepture/vim-css.git
@@ -48,13 +48,16 @@
 	url = https://github.com/maksimr/vim-jsbeautify.git
 [submodule "bundle/vim-matchit"]
 	path = bundle/vim-matchit
-	url = git@github.com:lambacck/vim-matchit.git
+	url = https://github.com/lambacck/vim-matchit.git
 [submodule "bundle/python_matchit"]
 	path = bundle/python_matchit
-	url = git@github.com:lambacck/python_matchit.git
+	url = https://github.com/lambacck/python_matchit.git
 [submodule "bundle/vim-repeat"]
 	path = bundle/vim-repeat
 	url = https://github.com/vim-scripts/repeat.vim
-[submodule "bundle/vim-addon-local-vimrc"]
-	path = bundle/vim-addon-local-vimrc
-	url = https://github.com/MarcWeber/vim-addon-local-vimrc.git
+[submodule "bundle/vim-python-pep8-indent"]
+	path = bundle/vim-python-pep8-indent
+	url = https://github.com/hynek/vim-python-pep8-indent.git
+[submodule "bundle/preserve-vim"]
+	path = bundle/preserve-vim
+	url = https://github.com/lambacck/preserve-vim.git
