Add vim-dispatch and vim-test

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,9 @@
 [submodule "bundle/ack.vim"]
 	path = bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
+[submodule "bundle/vim-test"]
+	path = bundle/vim-test
+	url = https://github.com/vim-test/vim-test.git
+[submodule "bundle/vim-dispatch"]
+	path = bundle/vim-dispatch
+	url = https://github.com/tpope/vim-dispatch.git
