--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "bundle/editorconfig-vim"]
 	path = bundle/editorconfig-vim
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "bundle/vim-pydocstring"]
+	path = bundle/vim-pydocstring
+	url = https://github.com/heavenshell/vim-pydocstring.git
